# Cryptobot-bybit

./: .env.example  .gitignore  PRD-cryptobot-bybit.md  README.md  cryptobot-fase0-1.md  prompt-design-system-dashboard.md  pyproject.toml
config/: backtest.yaml  data.yaml
config/strategies/: donchian.yaml  ema_rsi_v2.yaml
docs/: calibracao-t1.5.md  experimentos-fase-1.md  experimentos-v3.md  pesquisa-estrategias-v3.md  strategy-n1-spec.md  strategy-v2-spec.md
docs/pine/: ema_rsi_baseline.pine  ema_rsi_v2_mtf.pine
scripts/: calibrate_tv.py  check_data.py  download_data.py  run_backtest.py  run_experiment.py  run_grid.py  smoke_vectorbt.py
src/cryptobot/: __init__.py  config.py
src/cryptobot/backtest/: __init__.py  engine.py  funding.py  grid.py  report.py  walkforward.py
src/cryptobot/data/: __init__.py  client.py  downloader.py  integrity.py
src/cryptobot/executor/: __init__.py
src/cryptobot/indicators/: __init__.py  core.py
src/cryptobot/strategy/: __init__.py  base.py  donchian.py  ema_rsi_v2.py  registry.py
tests/: test_client_integration.py  test_data_integrity.py  test_donchian.py  test_engine.py  test_engine_oracle.py  test_grid_walkforward.py  test_import.py  test_indicators.py  test_report.py  test_signals.py
