[project]
name = "cryptobot"
version = "0.1.0"
description = "Bot de trading algorítmico pessoal para futuros perpétuos na Bybit — pesquisa quant (backtest com custos completos) e execução em demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pybit>=5.16.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "vectorbt>=0.28.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que acessam a API publica real da Bybit (rede)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
